[tool.poetry]
name = "motorcycle-fuel-and-service"
version = "0.1.0"
description = "App for keeping track of the total cost of ownership of your motorcycle"
authors = ["Roger Sherman <rsherman@linux.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
